// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GuestNetwork/> Snapshot disabled. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-dismissible alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    
Guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled DHCP. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-dismissible alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    
Guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the guest inner network.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="5"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="5"
          >
            Enable DHCP
            <small
              class="form-text text-muted"
            >
              Enable this option to automatically assign IP addresses to the devices connected to the router.
            </small>
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="11"
        >
          DHCP start
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="11"
            max="106"
            min="2"
            required=""
            type="number"
            value="100"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="12"
        >
          DHCP max leases
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="12"
            min="1"
            required=""
            type="number"
            value="150"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          Maximum number of addresses available for DHCP clients.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="13"
        >
          Lease time (hours)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="13"
            min="1"
            required=""
            type="number"
            value="3600"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="6"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="6"
          >
            Enable QoS
            <small
              class="form-text text-muted"
            >
              This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
            </small>
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  >
    <h3>
      DHCP Clients
    </h3>
    <p>
      No DHCP clients found.
    </p>
  </div>
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled QoS. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-dismissible alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    
Guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the guest inner network.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="5"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="5"
          >
            Enable DHCP
            <small
              class="form-text text-muted"
            >
              Enable this option to automatically assign IP addresses to the devices connected to the router.
            </small>
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="6"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="6"
          >
            Enable QoS
            <small
              class="form-text text-muted"
            >
              This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
            </small>
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="12"
        >
          Download
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="12"
            min="1"
            required=""
            type="number"
            value="1023"
          />
          <div
            class="input-group-append"
          >
            <p
              class="input-group-text"
            >
              kb/s
            </p>
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          Download speed in guest network (in kilobits per second).
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="13"
        >
          Upload
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="13"
            min="1"
            required=""
            type="number"
            value="1025"
          />
          <div
            class="input-group-append"
          >
            <p
              class="input-group-text"
            >
              kb/s
            </p>
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          Upload speed in guest network (in kilobits per second).
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-dismissible alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    
Guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the guest inner network.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="5"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="5"
          >
            Enable DHCP
            <small
              class="form-text text-muted"
            >
              Enable this option to automatically assign IP addresses to the devices connected to the router.
            </small>
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="6"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="6"
          >
            Enable QoS
            <small
              class="form-text text-muted"
            >
              This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
            </small>
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-lg-3"
          type="submit"
        >
           
           
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`Displaying of interface warning messages Interface up & snapshot 1`] = `
<div
  id="guest-notification"
/>
`;

exports[`Displaying of interface warning messages No interface & snapshot 1`] = `
<div
  id="guest-notification"
>
  <div
    class="alert alert-dismissible alert-warning"
  >
    This network currently doesn't contain any devices. The changes you make here will become fully functional after you assign a network interface to this network.
  </div>
</div>
`;

exports[`Displaying of interface warning messages No interface up & snapshot 1`] = `
<div
  id="guest-notification"
>
  <div
    class="alert alert-dismissible alert-warning"
  >
    All network interfaces of this network are currently down.
  </div>
</div>
`;
